k8s/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        homelab-role: nuc
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          resources:
            limits:
              gpu.intel.com/i915: 1
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          hostPath:
            path: /srv/jellyfin/config
            type: Directory
        - name: media
          hostPath:
            path: /srv/jellyfin/media
            type: Directory
