k8s/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
