k8s/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.home.gaborzeller.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    certResolver: cloudflare
    domains:
      - main: "*.home.gaborzeller.com"
